Adição de atualização de nome de lista
