# applications/node_ts/src/app/web/routes/ToDo.routes.ts
@@ -1,14 +1,0 @@
-import {Router} from "express";
-import {ToDoController} from "../controller/ToDoController";
-
-export const toDoRoutes: Router = Router();
-
-const toDoController = new ToDoController();
-
-toDoRoutes.post("/", toDoController.create)
-toDoRoutes.get("/", toDoController.findAll)
-toDoRoutes.get("/:toDoId", toDoController.findOne)
-toDoRoutes.delete("/:toDoId", toDoController.deleteOne)
-toDoRoutes.delete("/item/:toDoId/:itemId", toDoController.deleteOneItem)
-toDoRoutes.put("/item/:toDoId/:itemId", toDoController.updateItem)
-toDoRoutes.patch("/item/:toDoId", toDoController.addItems)
